--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Saka Wastra"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:K0hj8Nr+bsTM8VjfOfkT/ByZx2RYl9313S7VRzfYNFk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=3307
 DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
